[package]
name = "yamime"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Hao Chang"]
description = "Complete Rust port of Go's mime package with async-first design"
license = "MIT OR Apache-2.0"
keywords = ["mime", "multipart", "email", "http", "async"]
categories = ["asynchronous", "email", "encoding", "parsing", "web-programming"]
repository = "https://github.com/async-php/yamime"

[dependencies]
tokio = { version = "1.35", features = ["io-util", "fs", "rt", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }
base64 = "0.21"
pin-project = "1.1"
thiserror = "1.0"
once_cell = "1.19"
getrandom = "0.2"
bytes = "1.5"
futures = "0.3"
uuid = { version = "1.6", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[lib]
name = "yamime"
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false
